--- a/package.json
+++ b/package.json
@@ -1,144 +1,141 @@
 {
-    "name": "scrimshaw-react",
-    "version": "0.1.1",
-    "description":
-        "A render prop focused client for integrating GraphQL with React",
-    "main": "build/index.js",
-    "proxy": "http://localhost:4000/",
-    "scripts": {
-        "build": "node scripts/build.js",
-        "test": "node scripts/test.js --env=jsdom",
-        "precommit": "CI=true npm test && npm run lint",
-        "analyze": "npm run build && source-map-explorer build/index.js",
-        "start": "npm run get-schema && node scripts/start.js",
-        "lint": "./node_modules/.bin/eslint src/",
-        "get-schema":
-            "save-graphql-schema http://localhost:4000/graphql --json",
-        "storybook": "STORYBOOK_ACTIVE=1 start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+  "name": "scrimshaw-react",
+  "version": "0.1.1",
+  "description":
+    "A render prop focused client for integrating GraphQL with React",
+  "main": "build/index.js",
+  "proxy": "http://localhost:4000/",
+  "scripts": {
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
+    "precommit": "CI=true npm test && npm run lint",
+    "analyze": "npm run build && source-map-explorer build/index.js",
+    "start": "npm run get-schema && node scripts/start.js",
+    "lint": "./node_modules/.bin/eslint src/",
+    "get-schema": "save-graphql-schema http://localhost:4000/graphql --json",
+    "storybook": "STORYBOOK_ACTIVE=1 start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "docs:prepare": "gitbook install",
+    "docs:watch": "npm run docs:prepare && gitbook serve",
+    "docs:build": "npm run docs:prepare && rm -rf _book && gitbook build",
+    "docs:publish":
+      "npm run docs:build && cd _book && git init && git commit --allow-empty -m 'Update docs' && git checkout -b gh-pages && git add . && git commit -am 'Update docs' && git push git@github.com:cbranch101/scrimshaw-react gh-pages --force"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cbranch101/scrimshaw-react.git"
+  },
+  "author": "Clay Branch <clay.branch@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/cbranch101/scrimshaw-react/issues"
+  },
+  "homepage": "https://github.com/cbranch101/scrimshaw-react#readme",
+  "license": "MIT",
+  "dependencies": {
+    "deep-equal": "^1.0.1",
+    "graphql-request": "^1.3.4",
+    "history": "^4.6.3",
+    "husky": "^0.14.3",
+    "lodash": "^4.17.4",
+    "query-string": "^4.3.4",
+    "ramda": "^0.23.0",
+    "react": "^15.5.4",
+    "react-display-name": "^0.2.3",
+    "react-dom": "^15.6.1",
+    "react-formal": "^0.25.4",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.1.1",
+    "recompose": "^0.23.5",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.1.2",
+    "uuid": "^3.1.0",
+    "uuid-v4": "^0.1.0",
+    "yup": "^0.21.3"
+  },
+  "devDependencies": {
+    "@storybook/addon-storyshots": "^3.2.8",
+    "@storybook/react": "^3.1.3",
+    "autoprefixer": "7.1.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.0.2",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "6.23.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "css-loader": "0.28.4",
+    "dotenv": "4.0.0",
+    "enzyme": "^2.9.1",
+    "eslint": "4.4.1",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-graphql": "^1.3.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "fs-extra": "3.0.1",
+    "gitbook-cli": "^2.3.2",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "jest-styled-components": "^4.4.1",
+    "node-sass": "^4.5.3",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.6",
+    "prettier": "^1.7.3",
+    "prettier-eslint-cli": "^4.4.0",
+    "promise": "8.0.1",
+    "react": "^15.6.1",
+    "react-dev-utils": "^3.1.0",
+    "react-dom": "^15.6.1",
+    "react-error-overlay": "^1.0.10",
+    "react-test-renderer": "^15.6.1",
+    "redux-devtools-extension": "^2.13.2",
+    "sass-loader": "^6.0.6",
+    "save-graphql-schema": "^1.0.1",
+    "source-map-explorer": "^1.4.0",
+    "storyshots": "^3.2.2",
+    "style-loader": "0.18.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "2.7.1",
+    "webpack-manifest-plugin": "1.2.1",
+    "whatwg-fetch": "2.0.3"
+  },
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
+    "setupFiles": ["<rootDir>/config/polyfills.js"],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.js?(x)",
+      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/cbranch101/scrimshaw-react.git"
+    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
     },
-    "author": "Clay Branch <clay.branch@gmail.com>",
-    "bugs": {
-        "url": "https://github.com/cbranch101/scrimshaw-react/issues"
-    },
-    "homepage": "https://github.com/cbranch101/scrimshaw-react#readme",
-    "license": "MIT",
-    "dependencies": {
-        "deep-equal": "^1.0.1",
-        "graphql-request": "^1.3.4",
-        "history": "^4.6.3",
-        "husky": "^0.14.3",
-        "lodash": "^4.17.4",
-        "query-string": "^4.3.4",
-        "ramda": "^0.23.0",
-        "react": "^15.5.4",
-        "react-display-name": "^0.2.3",
-        "react-dom": "^15.6.1",
-        "react-formal": "^0.25.4",
-        "react-redux": "^5.0.6",
-        "react-router-dom": "^4.1.1",
-        "recompose": "^0.23.5",
-        "redux": "^3.7.2",
-        "redux-thunk": "^2.2.0",
-        "styled-components": "^2.1.2",
-        "uuid": "^3.1.0",
-        "uuid-v4": "^0.1.0",
-        "yup": "^0.21.3"
-    },
-    "devDependencies": {
-        "@storybook/addon-storyshots": "^3.2.8",
-        "@storybook/react": "^3.1.3",
-        "enzyme": "^2.9.1",
-        "eslint-plugin-graphql": "^1.3.0",
-        "jest-styled-components": "^4.4.1",
-        "prettier": "^1.7.3",
-        "prettier-eslint-cli": "^4.4.0",
-        "react-test-renderer": "^15.6.1",
-        "redux-devtools-extension": "^2.13.2",
-        "save-graphql-schema": "^1.0.1",
-        "source-map-explorer": "^1.4.0",
-        "storyshots": "^3.2.2",
-        "autoprefixer": "7.1.2",
-        "babel-cli": "^6.26.0",
-        "babel-core": "6.25.0",
-        "babel-eslint": "7.2.3",
-        "babel-jest": "20.0.3",
-        "babel-loader": "7.1.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-react-app": "^3.0.2",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-runtime": "6.23.0",
-        "case-sensitive-paths-webpack-plugin": "2.1.1",
-        "chalk": "1.1.3",
-        "css-loader": "0.28.4",
-        "dotenv": "4.0.0",
-        "eslint": "4.4.1",
-        "eslint-config-react-app": "^2.0.0",
-        "eslint-loader": "1.9.0",
-        "eslint-plugin-flowtype": "2.35.0",
-        "eslint-plugin-import": "2.7.0",
-        "eslint-plugin-jsx-a11y": "5.1.1",
-        "eslint-plugin-react": "7.1.0",
-        "extract-text-webpack-plugin": "3.0.0",
-        "file-loader": "0.11.2",
-        "fs-extra": "3.0.1",
-        "html-webpack-plugin": "2.29.0",
-        "jest": "20.0.4",
-        "node-sass": "^4.5.3",
-        "object-assign": "4.1.1",
-        "postcss-flexbugs-fixes": "3.2.0",
-        "postcss-loader": "2.0.6",
-        "promise": "8.0.1",
-        "react": "^15.6.1",
-        "react-dev-utils": "^3.1.0",
-        "react-dom": "^15.6.1",
-        "react-error-overlay": "^1.0.10",
-        "sass-loader": "^6.0.6",
-        "style-loader": "0.18.2",
-        "sw-precache-webpack-plugin": "0.11.4",
-        "url-loader": "0.5.9",
-        "webpack": "3.5.1",
-        "webpack-dev-server": "2.7.1",
-        "webpack-manifest-plugin": "1.2.1",
-        "whatwg-fetch": "2.0.3"
-    },
-    "jest": {
-        "collectCoverageFrom": ["src/**/*.{js,jsx}"],
-        "setupFiles": ["<rootDir>/config/polyfills.js"],
-        "testMatch": [
-            "<rootDir>/src/**/__tests__/**/*.js?(x)",
-            "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
-        ],
-        "testEnvironment": "node",
-        "testURL": "http://localhost",
-        "transform": {
-            "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-            "^(?!.*\\.(js|jsx|css|json)$)":
-                "<rootDir>/config/jest/fileTransform.js"
-        },
-        "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"],
-        "moduleNameMapper": {
-            "^react-native$": "react-native-web"
-        },
-        "moduleFileExtensions": [
-            "web.js",
-            "js",
-            "json",
-            "web.jsx",
-            "jsx",
-            "node"
-        ]
-    },
-    "babel": {
-        "presets": ["react-app"]
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    }
+    "moduleFileExtensions": ["web.js", "js", "json", "web.jsx", "jsx", "node"]
+  },
+  "babel": {
+    "presets": ["react-app"]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
