--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "scrimshaw-react",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description":
     "A render prop focused client for integrating GraphQL with React",
   "main": "build/index.js",
   "proxy": "http://localhost:4000/",
   "scripts": {
     "build": "node scripts/build.js",
+    "prepublish": "npm run build",
     "test": "node scripts/test.js --env=jsdom",
     "precommit": "CI=true npm test && npm run lint",
     "analyze": "npm run build && source-map-explorer build/index.js",
